Updated index.html & css/main.css with new content for the three columns flexbox grid div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -23,13 +24,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p><strong>XR Web Designer</strong><br>-- I believe that the internet should be a portal to more than just goods and services -- it is truly a gateway to a multiverse of experiences found in infinite, unique digital spaces that one would be happy to call their "home" on the web. I can help you create that wonderful place.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p><strong>Futurist</strong><br>-- Believe me when I say that I am so excited for the benefits that our ever advancing technologies can bring to our world. As an ardent futurist, I am committed to staying apprized of the latest advancements and how they can best be harnessed to enhance our lives in the here and now. I strive to keep your website in the vanguard of digital experiences.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p><strong>Dreamer</strong><br>-- We can all do our part to make the world a better place for future generations. Although the challenges may seem mighty now, we need only allow ourselves the chance to dream of something better, and let that inspiration help us design and create the things which, at one time, seemed impossible. So I ask you...what kind of web presence do you dream of?</p>
             </div>
         </section>    
 
