Revised text for Dreamer box

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p><strong>Futurist</strong><br>-- Believe me when I say that I am so excited for the benefits that our ever advancing technologies can bring to our world. As an ardent futurist, I am committed to staying apprized of the latest advancements and how they can best be harnessed to enhance our lives in the here and now. I strive to keep your website in the vanguard of digital experiences.</p>
             </div>
             <div class="div-3">
-                <p><strong>Dreamer</strong><br>-- We can all do our part to make the world a better place for future generations. Although the challenges may seem mighty now, we need only allow ourselves the chance to dream of something better, and let that inspiration help us design and create the things which, at one time, seemed impossible. So I ask you...what kind of web presence do you dream of?</p>
+                <p><strong>Dreamer</strong><br>-- We can all do our part to make the world a better place for future generations. Although the challenges may seem mighty now, we need only allow ourselves the chance to dream of something better and let that inspiration help us design and create those things which, at one time, seemed impossible. So I ask you...what kind of web presence do you dream of?</p>
             </div>
         </section>    
 
